# tetris-game

./: .flake8  .pre-commit-config.yaml  .pylintrc  CODE_QUALITY_SOLUTION.md  DEVELOPMENT.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tetris.py
.github/: CODING_STANDARDS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autofix.yml  ci.yml
scripts/: lint_fix.bat  lint_fix.py  lint_fix.sh  setup_hooks.py
tests/: test_tetris.py
